# khr_matthews_repo

./: .gitignore  README.md  sx10_positions.csv  testWaypoints.csv
3rd_party_launch_files/: KHR_ukf_localization.launch  KHR_ukf_localization.launch~
src/knee_high_robotics/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/knee_high_robotics/include/knee_high_robotics/: tcp_client_class.h
src/knee_high_robotics/launch/: khr_ukfs.launch  move_base_jackal.launch  move_base_jackal_odom_demo.launch  ukf_global.launch  ukf_localization.launch  ukf_localization_with_sx10_positions.launch
src/knee_high_robotics/params/custom_jackal_params/: base_local_planner_params.yaml  costmap_common_params.yaml
src/knee_high_robotics/params/custom_jackal_params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/knee_high_robotics/params/custom_jackal_params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/knee_high_robotics/params/move_base_jackal_params/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/knee_high_robotics/src/: robot_navigator.cpp  sensor_data_selector.cpp  tcp_client_class.cpp  tcp_server.cpp  tool_actuator.cpp  trimble_access_listener.cpp  trimble_precision_listener.cpp
src/knee_high_robotics/waypoint_files/: testWayPoints.csv  testWayPoints_outdoors.csv
src/robot_navigator/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/robot_navigator/src/: robot_navigator.cpp
src/tool_actuator/: CMakeLists.txt  package.xml
src/tool_actuator/src/: tool_actuator.cpp
src/trimble_access_listener/: CMakeLists.txt  package.xml
src/trimble_access_listener/src/: trimble_access_listener.cpp
